# ml3

./: .gitignore  CMakeLists.txt  Makefile  Makefile.costs  README.md  report.tex  sources.bib
data/: README.md
lib/: euler_diffusion.f90
programs/: euler.f90  nn_params.py  nn_params_analysis.py  nn_simple.py
